k8s/k8s-services/postgres-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    db: postgres
spec:
  selector:
    matchLabels:
      db: postgres
  template:
    metadata:
      labels:
        db: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          resources:
            requests:
              cpu: 100m
              memory: 60Mi
            limits:
              cpu: 200m
              memory: 120Mi
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-config-volume
      volumes:
        - name: postgres-config-volume
          configMap:
            name: postgres-config

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    db: postgres
spec:
  type: ClusterIP
  selector:
    db: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
