k8s/k8s-services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  labels:
    app: edge-service
spec:
  ingressClassName: nginx
  rules:
    - host: services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
