k8s/k8s-services/keycloak-management.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-keycloak
  labels:
    app: polar-keycloak
spec:
  selector:
    matchLabels:
      app: polar-keycloak
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: polar-keycloak
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: polar-keycloak
          image: quay.io/keycloak/keycloak:26.1.4
          imagePullPolicy: IfNotPresent
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-realm-export
              mountPath: /opt/keycloak/data/import/
      volumes:
        - name: keycloak-realm-export
          secret:
            secretName: keycloak-realm-export

---
apiVersion: v1
kind: Service
metadata:
  name: polar-keycloak
  labels:
    app: polar-keycloak
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: polar-keycloak

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: polar-keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: polar-keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polar-keycloak
                port:
                  number: 80
